[package]
name          = "opengles"
version       = "0.1.2"
authors       = ["Sean Kerr <sean@metatomic.io>"]
license       = "Apache-2.0"
description   = "Rust bindings for OpenGL ES 2.0"
homepage      = "https://github.com/seankerr/rust-opengles"
repository    = "https://github.com/seankerr/rust-opengles"
readme        = "README.md"
keywords      = ["gl", "gles", "glesv2", "opengl", "opengles"]
exclude       = [".gitignore"]

[dependencies]
khronos = "0.1.2"
libc    = "0.1.10"
