[package]
name          = "opengles"
version       = "0.3.0"
authors       = ["Sean Kerr <sean@metatomic.io>", "Lauri Gustafsson <me@gustafla.space>"]
license       = "Apache-2.0"
description   = "Rust bindings for OpenGL ES 2.0"
homepage      = "https://github.com/gustafla/rust-opengles"
repository    = "https://github.com/gustafla/rust-opengles"
readme        = "README.md"
keywords      = ["gl", "gles", "glesv2", "opengl", "opengles"]
exclude       = [".gitignore"]

[dependencies]
khronos = "0.1.2"
